--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
-name: Deploy Flask App to EC2
+name: Flask CI/CD
 
 on:
   push:
     branches: ["main"]
 
 jobs:
-  deploy:
+  build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,14 +21,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Docker image
+      - name: Build and Push image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: abdraheem98/my-flask-app:latest
 
-      - name: Deploy to EC2
+  deploy:
+    name: Deploy to EC2
+    runs-on: ubuntu-latest
+    needs: build   # 🔥 ensures deploy waits for build to finish
+    steps:
+      - name: Deploy over SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -38,4 +43,4 @@ jobs:
             docker pull abdraheem98/my-flask-app:latest
             docker stop flask-app || true
             docker rm flask-app || true
-            docker run -d -p 5000:5000 --name flask-app abdraheem98/my-flask-app:latest
+            docker run -d -p 80:5000 --name flask-app abdraheem98/my-flask-app:latest
