--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: | 
+             pip install -r requirements.txt
+             pip install pytest 
 
   # -------------------
   # Stage 2: Test
