--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   # -------------------
-  # Stage 1: Build
+  # 1. Build Stage
   # -------------------
   build:
     name: Build Stage
@@ -21,17 +21,15 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: | 
-             pip install -r requirements.txt
-             pip install pytest 
+        run: pip install -r requirements.txt
 
   # -------------------
-  # Stage 2: Test
+  # 2. Test Stage
   # -------------------
   test:
     name: Test Stage
     runs-on: ubuntu-latest
-    needs: build   # wait for build stage
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -42,18 +40,20 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install pytest   # Ensure pytest is available
 
       - name: Run pytest
         run: pytest
 
   # -------------------
-  # Stage 3: Docker Build & Push
+  # 3. Docker Build & Push
   # -------------------
   docker:
     name: Docker Stage
     runs-on: ubuntu-latest
-    needs: test   # wait for test stage
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -75,12 +75,12 @@ jobs:
           tags: abdraheem98/my-flask-app:latest
 
   # -------------------
-  # Stage 4: Deploy
+  # 4. Deploy Stage
   # -------------------
   deploy:
-    name: Deploy Stage
+    name: Deploy to EC2
     runs-on: ubuntu-latest
-    needs: docker   # wait for docker stage
+    needs: docker   # Wait until Docker push finishes
     steps:
       - name: Deploy over SSH
         uses: appleboy/ssh-action@v1.0.3
