--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,14 @@ jobs:
           python-version: "3.10"
       - name: Install Dependencies
         run: pip install -r requirements.txt
+  test:
+    name: test Stage
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Dependencies
+        run: pip install pytest
+      - name: Run pytest
+        run: pytest tests/
