--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Set up python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10" 
       - name: Install Dependencies
-        run: pip install pytest
+        run: |
+          pip install -r requirements.txt
+          pip install pytest
       - name: Run pytest
         run: pytest tests/
