--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,17 @@ jobs:
           context: .
           push: true
           tags: abdraheem98/urlapp:latest
+  deploy:
+    name: Deploy to ec2
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Deploy over ssh
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull abraheem98/urlapp
+            docker run -d -p 5000:5000 --name urlapp abraheem98/urlapp
