--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,11 +57,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker
     steps:
-      - name: Login to Dockerhub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Deploy over ssh
         uses: appleboy/ssh-action@v1
         with:
@@ -69,5 +64,5 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull abraheem98/my-flask-app:latest
-            docker run -d -p 5000:5000 --name urlapp abraheem98/my-flask-app:latest
+            docker pull abdraheem98/my-flask-app:latest
+            docker run -d -p 5000:5000 --name urlapp abdraheem98/my-flask-app:latest
