--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: abdraheem98/my-flask-app:latest
+          tags: kgupta05/lab1-build:latest
   deploy:
     name: Deploy to ec2
     runs-on: ubuntu-latest
@@ -64,5 +64,5 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull abdraheem98/my-flask-app:latest
-            docker run -d -p 5000:5000 --name urlapp abdraheem98/my-flask-app:latest
+            docker pull kgupta05/lab1-build:latest
+            docker run -d -p 5000:5000 --name urlapp kgupta05/lab1-build:latest
